# lana

./: .gitignore  README.md  ROADMAP.md  config.jsonc.template  flake.nix  pyproject.toml  requirements.txt  shell.nix
src/: __init__.py  consts.py  index.py  tools.py
src/lana_gemcli/: consts.py  main.py  tools.py
